--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6"
   },
+  "config": {
+    "nuxt": {
+      "host": "0.0.0.0",
+      "port": "3000"
+    }
+  },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2",
     "@vue/test-utils": "^1.1.0",
