--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxt/content": "^1.11.1",
     "@nuxtjs/axios": "^5.12.2",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
+    "moment": "^2.29.1",
+    "nuxt": "^2.14.6",
+    "prism-themes": "^1.5.0"
   },
   "config": {
     "nuxt": {
